--- a/.github/workflows/compileWorkFlow.yml
+++ b/.github/workflows/compileWorkFlow.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   gradle:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-java@v1
