--- a/.github/workflows/compileWorkFlow.yml
+++ b/.github/workflows/compileWorkFlow.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - name: Grant Execute permissions for gradlew
+        run: chmod +x gradlew
+
       # Execute Gradle commands in GitHub Actions workflows
       # => https://github.com/marketplace/actions/gradle-command
       - uses: eskatos/gradle-command-action@v1
@@ -18,3 +21,8 @@ jobs:
           wrapper-cache-enabled: true
           dependencies-cache-enabled: true
           configuration-cache-enabled: true
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+            name: ${{ steps.compile.outputs.filename }}
+            path: ${{ steps.compile.outputs.artifactpath }}
