--- a/.github/workflows/compileWorkFlow.yml
+++ b/.github/workflows/compileWorkFlow.yml
@@ -23,4 +23,4 @@ jobs:
           configuration-cache-enabled: true
 
       - name: Echo Filenames
-        run: echo ${{ steps.Compile }}
+        run: echo ${{ steps.Compile.outputs }}
